# bmstu-db

./: .gitignore  Dockerfile  README.md  docker-compose.yml
lab_01/: init.sql
lab_02/: career.sql  check_shifts.sql  lineups.sql  query01.sql  query02.sql  query03.sql  query04.sql  query05.sql  query06.sql  query07.sql  query08.sql  query09.sql  query10.sql  query11.sql  query12.sql  query13.sql  query14.sql  query15.sql  query16.sql  query17.sql  query18.sql  query19.sql  query20.sql  query21.sql  query22.sql  query23.sql  query24.sql  query25.sql
lab_03/: task01.sql  task01ex.sql  task02.sql  task02ex.sql  task03.sql  task03ex.sql  task04.sql  task04ex.sql  task05.sql  task05ex.sql  task06.sql  task06ex.sql  task07.sql  task07ex.sql  task08.sql  task08ex.sql  task09.sql  task09ex.sql  task10.sql  task10ex.sql
lab_04/: additional.sql  task_01.sql  task_01ex.sql  task_02.sql  task_02ex.sql  task_03.sql  task_03ex.sql  task_04.sql  task_04ex.sql  task_05.sql  task_05ex.sql  task_06.sql  task_06ex.sql
lab_05/: 1_to_json.sql  2_from_json.sql  30_career_json.sql  31_add_career.sql  32_check_career.sql  41_fragment.sql  42_value.sql  43_check_existance.sql  44_change.sql  45_nodes.sql
lab_06/: Cargo.toml
lab_07/: Cargo.toml  diesel.toml  warn_db.sql
lab_07/src/: json.rs  main.rs  object.rs  sql.rs
lab_07/src/object/: utils.rs
lab_07/src/sql/: models.rs  schema.rs
rk03/: Cargo.toml
rk03/sql/: create.sql  f1.sql  f2.sql  f3.sql  func.sql  insert.sql
rk03/src/: main.rs
rk_02/: fill.sql  init.sql  procedure.sql  query1.sql  query2.sql  query3.sql
(+10 files in other folders)
