[package]
name = "lab_07"
version = "0.1.0"
authors = ["Perestoronin Pavel <p_perestoronin@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
postgres = { version = "0.18.1", features = [ "with-chrono-0_4", "with-serde_json-1" ] }
chrono = "0.4.19"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.60"
