[package]
name = "rk03"
version = "0.1.0"
authors = ["Perestoronin Pavel <p_perestoronin@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = { version = "0.18", features = ["with-chrono-0_4"] }
chrono = "0.4"
itertools = "0.9"
